vau2 增删改查 分页

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8000 #服务器启动端口
+  port: 8081 #服务器启动端口
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource #配置数据源的类型·
     username: root
     password: 123456
